--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    background: linear-gradient(135deg, #6a11cb 0%, #2575fc 100%);
+    background: linear-gradient(135deg, #f1ff2b 0%, #b89703 100%);
     color: #fff;
     display: flex;
     justify-content: center;
@@ -17,7 +17,7 @@ body {
     justify-content: center;
     align-items: center;
     padding: 20px 30px;
-    background: rgba(0, 0, 0, 0.7);
+    background: rgba(0, 0, 0, 0.418);
     border-radius: 15px;
     box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
     animation: fadeIn 2s ease-in-out;
@@ -69,8 +69,8 @@ body {
 
 .linkedin button {
     padding: 1px 200px;
-    background: linear-gradient(135deg, #2b03a0 0%, #044dcb 100%);
-    border: none;
+    background: #00000000;
+    border: solid 2px #e1c006;
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
@@ -82,8 +82,7 @@ body {
 }
 
 .linkedin a button:hover {
-  background: #111790;
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .linkedin button h1 {
@@ -103,9 +102,9 @@ body {
 }
 
 .github button {
-    padding: 1px 209.35px;
-    background: linear-gradient(135deg, #2b03a0 0%, #044dcb 100%);
-    border: none;
+    padding: 1px 205.7px;
+    background: #00000000;
+    border: solid 2px #e1c006;
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
@@ -117,9 +116,9 @@ body {
 }
 
 .github a button:hover {
-  background: #111790;
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
+
 
 .github button h1 {
     font-size: 20px;
@@ -128,7 +127,7 @@ body {
 
 .github i {
     font-size: 38px;
-    margin-left: -200px;
+    margin-left: -189px;
 }
 
 .instagram a  {
@@ -139,8 +138,8 @@ body {
 
 .instagram button {
     padding: 1px 191.7px;
-    background: linear-gradient(135deg, #2b03a0 0%, #044dcb 100%);
-    border: none;
+    background: #00000000;
+    border: solid 2px #e1c006;
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
@@ -152,8 +151,7 @@ body {
 }
 
 .instagram a button:hover {
-  background: #111790;
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .instagram button h1 {
@@ -174,8 +172,8 @@ body {
 
 .portifolio button {
     padding: 1px 194.5px;
-    background: linear-gradient(135deg, #2b03a0 0%, #044dcb 100%);
-    border: none;
+    background: #00000000;
+    border: solid 2px #e1c006;
     border-radius: 50px;
     color: #fff;
     cursor: pointer;
@@ -187,8 +185,7 @@ body {
 }
 
 .portifolio a button:hover {
-  background: #111790;
-  transform: scale(1.05);
+    transform: scale(1.05);
 }
 
 .portifolio button h1 {
